bynkc/tests/fixtures/positive/158_state_refined_init/src/gauge.bynk
context gauge

type Level = Int where Positive

agent Gauge {
  key id: String

  store level: Cell[Level] = 1

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
