bynkc/tests/fixtures/negative/319_assign_self_reference_via_match/src/probe.bynk
context probe

agent Tally {
  key id: String

  store count: Cell[Int]

  -- The RHS reads the written cell through a match arm; the old partial
  -- child-walker descended into discriminants only, so this bypassed the
  -- read-modify-write rule (#515).
  on call bump(flag: Bool) -> Effect[Result[Int, String]] {
    count := match flag {
      true => count + 1
      false => count
    }
    Ok(count)
  }
}
